--- a/src/app/todolist.html
+++ b/src/app/todolist.html
@@ -1,5 +1,3 @@
-<h1>First Application</h1>
-
 <h1>Todo List</h1>
 
 <form class="form-inline">
@@ -27,7 +25,7 @@
 				<td>
 					<div class="checkbox">
 						<label>
-							<input type="checkbox" ng-model="todo.completed">
+							<input type="checkbox" [(ng-model)]="todo.completed" /> {{todo.completed}}
 						</label>
 					</div>
 				</td>
@@ -38,4 +36,4 @@
 		</tbody>
 	</table>
 </div>
-<pre>{{vm | json}}</pre>
+<!-- change detection is way different in Angular 2 <pre>{{todos | json}}</pre> -->
